--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -143,11 +143,13 @@ body {
     z-index: 2;
     position: absolute;
     right: 20rem;
-    height: 100%; }
+    height: 100%;
+    border-radius: 1rem; }
   .landing-content__landing-box-gradient {
     z-index: 1;
     position: absolute;
     top: 6rem;
+    border-radius: 1rem;
     min-width: 30vw;
     height: 100%;
     max-height: 450px;
@@ -167,39 +169,44 @@ align-content — described in the spec as for “packing flex lines”; control
   flex-direction: column;
   justify-content: center;
   align-items: center; }
+  .exclusives__exclusives-title {
+    font-size: 6rem;
+    color: var(--color-text-white);
+    text-align: center;
+    margin-bottom: 3rem; }
   .exclusives__exclusives-subtext {
     margin-top: 6rem;
     font-size: 2rem; }
-
-.exclusives__exclusives-title {
-  font-size: 6rem;
-  color: var(--color-text-white);
-  text-align: center;
-  margin-bottom: 3rem; }
-
-.exclusives-card-container {
-  display: flex;
-  justify-content: center; }
-
-.exclusives-card {
-  display: flex;
-  align-items: flex-end;
-  height: 300px;
-  width: 200px;
-  background-color: orangered; }
-  .exclusives-card__exclusives-card-overlay {
+  .exclusives__card-container {
     display: flex;
-    width: 100%;
-    height: 30%;
-    background-color: green;
-    align-items: center;
     justify-content: center; }
-  .exclusives-card__exclusives-card-title {
-    color: var(--color-text-white);
-    text-align: center; }
-
-.exclusives-card:nth-child(n + 2) {
-  margin-left: 2rem; }
+    .exclusives__card-container__card {
+      display: flex;
+      align-items: flex-end;
+      height: 300px;
+      width: 200px;
+      background-image: linear-gradient(to right bottom, rgba(94, 67, 252, 0.8) 10%, rgba(195, 59, 228, 0.1) 30%), url(/img/excl1.png);
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem;
+      /*       background-image: url("/img/excl3.png"),
+        linear-gradient(
+          to right bottom,
+          var(--color-background-gradient-1),
+          var(--color-background-gradient-2) 25%
+        ); */ }
+      .exclusives__card-container__card__card-overlay {
+        display: flex;
+        width: 100%;
+        height: 30%;
+        background-image: linear-gradient(to top, var(--color-background-gradient-1), var(--color-background-gradient-2));
+        align-items: center;
+        justify-content: center; }
+      .exclusives__card-container__card__card-title {
+        color: var(--color-text-white);
+        font-size: 1.8rem;
+        text-align: center; }
+    .exclusives__card-container__card:nth-child(n + 2) {
+      margin-left: 2rem; }
 
 .overview {
   color: var(--overview-text-grey);
@@ -243,4 +250,57 @@ align-content — described in the spec as for “packing flex lines”; control
     font-size: 2rem; }
 
 .fifty-percent {
-  color: var(--overview-text-grey); }
+  color: var(--overview-text-grey);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .fifty-percent__container {
+    margin: auto;
+    box-shadow: 5px 5px 8px var(--color-background-gradient-1);
+    border-radius: 10vh;
+    padding: 2rem 4rem;
+    background-image: linear-gradient(to bottom, var(--color-background-gradient-1), var(--color-background-gradient-2)); }
+    .fifty-percent__container__title {
+      text-align: center;
+      font-size: 4rem;
+      color: var(--color-text-white); }
+    .fifty-percent__container__subtitle {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--color-text-secondary); }
+  .fifty-percent__container2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .fifty-percent__container2__text {
+      color: white;
+      font-size: 1.5rem; }
+    .fifty-percent__container2__icon {
+      fill: white;
+      width: 2rem; }
+
+.courses {
+  display: flex;
+  justify-content: center; }
+  .courses__container {
+    max-width: 1000px;
+    max-height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 100%; }
+    .courses__container__card {
+      margin-bottom: 4rem;
+      display: flex;
+      flex: 0 0 300px;
+      height: 150px;
+      border-radius: 1rem;
+      justify-content: center;
+      background-image: linear-gradient(to top, rgba(94, 67, 252, 0.5), rgba(195, 59, 228, 0.6)); }
+      .courses__container__card__title {
+        font-size: 2rem;
+        align-self: center; }
+    .courses__container__card:nth-child(n + 1) {
+      margin-left: 3rem; }
