--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -185,7 +185,7 @@ align-content — described in the spec as for “packing flex lines”; control
       align-items: flex-end;
       height: 300px;
       width: 200px;
-      background-image: linear-gradient(to right bottom, rgba(94, 67, 252, 0.8) 10%, rgba(195, 59, 228, 0.1) 30%), url(/img/excl1.png);
+      background-image: linear-gradient(to right bottom, rgba(94, 67, 252, 0.8) 10%, rgba(195, 59, 228, 0.1) 30%), url("/img/excl1.png");
       border-top-left-radius: 1rem;
       border-top-right-radius: 1rem;
       /*       background-image: url("/img/excl3.png"),
